# templates

./: CargoLambda.toml
lambda/: CargoLambda.toml  README.md
lambda/template/: Cargo.toml
lambda/template/src/: main.rs
template/: Cargo.toml  CargoLambda.toml  README.md
worker/: .gitignore  Cargo.toml  README.md  openapi.json  package.json  rust-toolchain.toml  rustup-toolchain.toml  wrangler.jsonc  wrangler.toml
worker-openapi/: .gitignore  Cargo.toml  README.md  package.json  wrangler.jsonc  wrangler.toml
worker-openapi/src/: lib.rs
worker/src/: lib.rs
worker_yew_spa/: .gitignore  Cargo.toml  README.md  index.html  package.json  wrangler.toml
worker_yew_spa/assets/: README.md
worker_yew_spa/src/: front.rs  server.rs
worker_yew_spa/src/api/: errors.rs  mod.rs
worker_yew_spa/src/models/: mod.rs
worker_yew_spa/src/ui/: fetch.rs  mod.rs  utils.rs
worker_yew_spa/src/ui/components/: mod.rs
