[package]
name    = "worker-openapi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies.ohkami]
git = "https://github.com/ohkami-rs/ohkami"
branch = "v0.24"
features = ["rt_worker"]

[dependencies]
console_error_panic_hook = "0.1"
worker = { version = "0.5" }

[features]
openapi = ["ohkami/openapi"]

# --no-default-features in release build
default = ["openapi"]
