[package]
name    = "worker-openapi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
console_error_panic_hook = "0.1"
ohkami = { version = "0.24", features = ["rt_worker"] }
worker = { version = "0.6" }

[features]
openapi = ["ohkami/openapi"]

# --no-default-features in release build
default = ["openapi"]
