[package]
name    = "ohkami_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"

[dependencies]
console_error_panic_hook = { version = "0.1.7" }
ohkami = { git = "https://github.com/kana-rus/ohkami.git", features = ["rt_worker"] }
worker = { version = "0.3" }
